[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
alembic = "1.7.1"
amqp = "2.6.1"
argcomplete = "1.12.3"
argh = "0.26.2"
attrs = "21.2.0"
bcrypt = "3.2.0"
billiard = "3.6.4.0"
cachetools = "4.2.2"
celery = "4.4.7"
certifi = "2021.5.30"
cffi = "1.14.6"
chardet = "4.0.0"
charset-normalizer = "2.0.5"
click = "7.1.2"
cryptography = "3.4.8"
cssselect = "1.1.0"
cssutils = "2.3.0"
dnspython = "2.1.0"
ecdsa = "0.17.0"
email-validator = "1.1.3"
emails = "0.5.15"
et-xmlfile = "1.1.0"
fastapi = "0.54.2"
gffutils = "0.10.1"
greenlet = "1.1.1"
gunicorn = "20.1.0"
h11 = "0.9.0"
httptools = "0.1.2"
idna = "3.2"
importlib-metadata = "4.8.1"
importlib-resources = "5.2.2"
Jinja2 = "2.11.3"
kombu = "4.6.11"
lxml = "4.6.3"
Mako = "1.1.5"
MarkupSafe = "2.0.1"
more-itertools = "8.10.0"
numpy = "1.21.1"
openpyxl = "3.0.9"
packaging = "21.0"
pandas = "1.1.5"
passlib = "1.7.4"
pluggy = "0.13.1"
premailer = "3.10.0"
psycopg2-binary = "2.9.1"
py = "1.10.0"
pyasn1 = "0.4.8"
pycparser = "2.20"
pydantic = "1.8.2"
pyfaidx = "0.6.2"
pyparsing = "2.4.7"
pysam = "0.18.0"
pytest = "5.4.3"
python-dateutil = "2.8.2"
python-jose = "3.3.0"
python-multipart = "0.0.5"
pytz = "2021.1"
raven = "6.10.0"
requests = "2.26.0"
rsa = "4.7.2"
simplejson = "3.17.5"
six = "1.16.0"
SQLAlchemy = "1.4.22"
starlette = "0.13.2"
tenacity = "6.3.1"
typing-extensions = "3.10.0.2"
urllib3 = "1.26.6"
uvicorn = "0.11.8"
uvloop = "0.16.0"
vine = "1.3.0"
wcwidth = "0.2.5"
websockets = "8.1"
xlrd = "2.0.1"
zipp = "3.5.0"
pandera = "^0.9.0"
SQLAlchemy-Utils = "^0.38.2"
types-requests = "^2.27.11"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

